* `bson_string_t` and associated functions are removed.
* `mongoc_cursor_is_alive` is removed. Use the equivalent `mongoc_cursor_more` instead.
* `mongoc_collection_delete` is removed. Use `mongoc_collection_delete_one` or `mongoc_collection_delete_many` instead.
* `mongoc_delete_flags_t` and `mongoc_reply_flags_t` are removed.
* Support for the deprecated `minPoolSize` URI option is removed along with associated API: `MONGOC_URI_MINPOOLSIZE` and `mongoc_client_pool_min_size`.
* Support for LibreSSL (the CMake option `ENABLE_SSL=LIBRESSL`) is removed. Associated API is removed (`MONGOC_ENABLE_SSL_LIBRESSL` and  `mongoc_stream_tls_libressl_new`).

### Forwarding headers (`#include <bson.h>` and `#include <mongoc.h>`)

The compatibility "forwarding" headers have been removed (previously added in 1.13.0). This means it is no longer valid to include the literal header names `mongoc.h` or `bson.h` directly:

```c
#include <bson.h> // No longer provided!
#include <mongoc.h> // No longer provided!
```

Instead, the names must be prefixed with the parent directory: `mongoc/mongoc.h` and `bson/bson.h`:

```c
#include <bson/bson.h>
#include <mongoc/mongoc.h>
```



libmongoc 1.30.2
================

Fixes:

  * Fix C23 build on Windows.

Thanks to everyone who contributed to the development of this release.

  * Jeroen Ooms

libmongoc 1.30.1
================

No changes since 1.30.0. Version incremented to match the libbson version.

libmongoc 1.30.0
================

Fixes:

  * Additional APM events required by the SDAM specification will now be delivered:
    * Servers that have seen `server_opening` will now see a `server_closed` prior to `topology_closed`.
    * Before `topology_closed`, a `topology_changed` event will transition to `Unknown` topology type.
  * Fix reporting insert IDs in `mongoc_bulkwrite_t` when verbose results requested.

Improvements:

  * Improve performance of `mongoc_server_description_new_copy`.

New Features:
