@@ -148,18 +148,8 @@ mongo_setting(
          message(WARNING "ENABLE_SASL=SSPI is only supported on Windows platforms")
       endif()
       if(ENABLE_SASL STREQUAL "CYRUS" AND WIN32)
-         message(DEPRECATION "ENABLE_SASL=CYRUS on Windows platforms is deprecated and may be removed in a future major release")
+         message(WARNING "ENABLE_SASL=CYRUS on Windows platforms is unsupported. Use ENABLE_SASL=SSPI or ENABLE_SASL=OFF instead")
       endif()
-   ]]
-)
-
-mongo_setting(CYRUS_PLUGIN_PATH_PREFIX "An absolute path prefix to enable loading Cyrus SASL plugins on Windows"
-   TYPE STRING
-   VISIBLE_IF [[ENABLE_SASL STREQUAL "CYRUS" AND WIN32]]
-   VALIDATE CODE [[
-      if (CYRUS_PLUGIN_PATH_PREFIX)
-         message(DEPRECATION "CYRUS_PLUGIN_PATH_PREFIX is deprecated and may be removed in a future major release")
-      endif ()
    ]]
 )
 
